MDEXP-861 - Update GET /data-export/download-record/{recordId} endpoint to suppress 999ff field (#566)
* MDEXP-861 Added suppress999 param

(cherry picked from commit 149a73eeb812dcfb484aba1ad632bc8cf83a274e)